# wordstat

./: .gitattributes  .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: snapshot.yml
benches/: bench.rs
examples/: Pride and Prejudice.txt
resources/: manifest.xml
src/: main_cli.rs  main_gui.rs  shared.rs  uhash.rs  ustring.rs
src/cli/: main.rs
src/gui/: main.rs  report.rs
src/shared/: mod.rs  uhash.rs  ustring.rs
