cargo-features = ["strip"]

[package]
authors = ["Systemcluster <me@systemcluster.me>"]
build = "build.rs"
description = "Word Counter and Text Statistics"
edition = "2021"
name = "wordstat"
version = "0.1.0"

[[bin]]
name = "wordstat"
path = "src/main_cli.rs"

[[bin]]
name = "wordstat-gui"
path = "src/main_gui.rs"
required-features = ["gui"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
panic = "unwind"
strip = "symbols"

[dependencies]

bumpalo = {version = "3"}
byteorder = {version = "1"}
clap = {version = "3", features = ["std", "color", "suggestions", "derive", "env", "regex", "unicode", "wrap_help"]}
console = {version = "0.15"}
entangled = {version = "1"}
flume = {version = "0.10"}
futures = {version = "0.3"}
indicatif = {version = "0.17.0-rc.2"}
num_cpus = {version = "1"}
parking_lot = {version = "0.12"}
pathdiff = {version = "0.2"}
rayon = {version = "1"}
unicode-segmentation = {version = "1"}
walkdir = {version = "2"}
wild = {version = "2.1.0-alpha.2"}

native-windows-derive = {version = "1", optional = true}
native-windows-gui = {version = "1", optional = true, default-features = false, features = ["all"]}

[features]
gui = ["native-windows-gui", "native-windows-derive"]

[build-dependencies]
winres = {version = "0.1"}
