cargo-features = ["strip"]

[package]
authors = ["Systemcluster <me@systemcluster.me>"]
build = "build.rs"
description = "Word Counter and Text Statistics"
edition = "2021"
name = "wordstat"
version = "0.1.0"

[[bin]]
name = "wordstat"
path = "src/main_cli.rs"
required-features = ["cli"]

[[bin]]
name = "wordstat-gui"
path = "src/main_gui.rs"
required-features = ["gui"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
panic = "unwind"
strip = "symbols"

[dependencies]

bumpalo = {version = "3"}
byteorder = {version = "1"}
entangled = {version = "1"}
futures = {version = "0.3"}
num_cpus = {version = "1"}
parking_lot = {version = "0.12"}
pathdiff = {version = "0.2"}
rayon = {version = "1"}
unicode-segmentation = {version = "1"}
walkdir = {version = "2"}

clap = {version = "3", features = [
  "std",
  "color",
  "suggestions",
  "derive",
  "env",
  "regex",
  "unicode",
  "wrap_help",
], optional = true}
console = {version = "0.15", optional = true}
indicatif = {version = "0.17.0-rc.2", optional = true}
wild = {version = "2.1.0-alpha.2", optional = true}

flume = {version = "0.10", optional = true}
native-windows-derive = {version = "1", optional = true}
native-windows-gui = {version = "1", default-features = false, features = ["all"], optional = true}
winapi = {version = "0.3", default-features = false, features = [
  "wincon",
  "wincontypes",
], optional = true}

[features]
default = ["cli"]

cli = ["wild", "clap", "indicatif", "console"]
gui = ["native-windows-gui", "native-windows-derive", "flume", "winapi"]

[build-dependencies]
winres = {version = "0.1"}
