[package]
authors = ["Systemcluster <me@systemcluster.me>"]
build = "build.rs"
description = "Word Counter and Text Statistics"
edition = "2021"
name = "wordstat"
version = "0.2.0"
rust-version = "1.70.0"
default-run = "wordstat"

[[bin]]
name = "wordstat"
path = "src/cli/main.rs"
required-features = ["cli"]

[[bin]]
name = "wordstat-gui"
path = "src/gui/main.rs"
required-features = ["gui"]

[[bench]]
harness = false
name = "wordstat-bench"
path = "benches/bench.rs"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
panic = "unwind"
strip = "symbols"

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[dependencies]

anyhow = {version = "1"}
bumpalo = {version = "3"}
byteorder = {version = "1"}
dashmap = {version = "5"}
emojis = {version = "0.6"}
entangled = {version = "1"}
futures = {version = "0.3"}
num_cpus = {version = "1"}
parking_lot = {version = "0.12"}
pathdiff = {version = "0.2"}
rayon = {version = "1"}
regex = {version = "1"}
unicode-segmentation = {version = "1"}
walkdir = {version = "2"}

clap = {version = "3.2", features = [
  "std",
  "color",
  "suggestions",
  "derive",
  "env",
  "regex",
  "unicode",
  "wrap_help",
], optional = true}
console = {version = "0.15", optional = true}
indicatif = {version = "0.17", optional = true}
wild = {version = "2.1", optional = true}

flume = {version = "0.10", optional = true}
native-windows-derive = {version = "=1.0.5", optional = true}
native-windows-gui = {version = "=1.0.12", default-features = false, features = ["all", "high-dpi"], optional = true}
winapi = {version = "0.3", default-features = false, features = [
  "wincon",
  "wincontypes",
  "winuser",
  "shellscalingapi",
], optional = true}

[features]
default = ["cli"]

cli = ["wild", "clap", "indicatif", "console"]
gui = ["native-windows-gui", "native-windows-derive", "flume", "winapi"]

[build-dependencies]
which = {version = "4"}
winres = {version = "0.1"}

[dev-dependencies]
glassbench = "0.3"
